2002-08-23 01:44  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ARTContext.m: Implement handling of non-rectangle
	clipping paths. Use it when rendering paths (but not for other
	operators yet).

2002-08-22 02:34  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ARTContext.m: (-DPSrectclip::::): Fix rounding when
	converting to pixel coordinates.

2002-08-21 20:27  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ARTContext.m, Source/art/ARTWindowBuffer.h,
	Source/art/ARTWindowBuffer.m, Source/art/GNUmakefile: Renamed the
	WinImage class to ARTWindowBuffer and moved it to its own file.

2002-08-21 14:52  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/blit.h, Source/art/blit.m, Source/art/ftfont.h,
	Source/art/ftfont.m: Reformat to fit coding standards better.

2002-08-21 13:50  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ARTContext.m: Move common code from _fill and DPSstroke
	to convert the current path to an ArtVpath to a new method. Update
	callers.

	(-compositerect:op:): Create alpha buffer for NSCompositeCopy
	if the current color isn't completely opaque.

2002-08-21  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ARTContext.m: ([WinImage -_exposeRect:]) Guard against
	invalid coordinates to (hopefully) fix the problem with windows
	turning all white and BadValue warnings appearing.

2002-08-20  Alexander Malmberg <alexander@malmberg.org>

	* Headers/art/, Source/art/: Add back-art, a backend based on
	libart and freetype.

2002-08-15  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Add NetBSD header/ldflag support (Patch from
	Peter Cooper). Cleanup freebsd support.

2002-08-06  Adam Fedor  <fedor@gnu.org>

	* Source/x11/XGServerEvent.m ([XGServer
	-receivedEvent:type:extra:forMode:]): Add special gotShmCompletion
	call for libart backend.

2002-08-02  Adam Fedor  <fedor@gnu.org>

	* Merge from 0.8.0 into main branch.

2002-08-01  Adam Fedor  <fedor@gnu.org>

	* Version: 0.8.0
	